# Start

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile.sh  create_executable.bat  create_executable.sh  experiments.sh  run.sh  run_in_docker.sh  run_inter_results.sh  run_test.sh  visualize.py  vmd.tcl
hdf5_mesh_sim/: create_entities.py  create_mesh_manually.py  inst_deps.py  main.py  simulate_motion.py  work_with_hdf5.py  work_with_mesh.py
include/: HDF5Handler.hpp  MathVector.hpp  Mesh.hpp  MeshImpl.hpp  Particle.hpp  ParticleImpl.hpp  ParticleTracker.hpp  Ray.hpp  RaySurfaceIntersectionTracker.hpp  RayTriangleIntersectionTracker.hpp  RealNumberGenerator.hpp  Settings.hpp  Timer.hpp  VolumeCreator.hpp  VolumeCreatorImpl.hpp
include/DataHandling/: HDF5Handler.hpp  VolumetricMeshData.hpp
include/FiniteElementMethod/: GSMatrixAssemblier.hpp  MatrixEquationSolver.hpp  SolutionVector.hpp
include/Generators/: RealNumberGenerator.hpp  RealNumberGeneratorImpl.hpp  VolumeCreator.hpp  VolumeCreatorImpl.hpp
include/Geometry/: CGALTypes.hpp  Grid3D.hpp  MathVector.hpp  Mesh.hpp  MeshImpl.hpp  Point.hpp  PointImpl.hpp  Ray.hpp  RayImpl.hpp  RayTriangleIntersection.hpp  RayTriangleIntersectionImpl.hpp  Triangle.hpp  TriangleImpl.hpp
include/ParticleInCell/: Grid3D.hpp  ParticleInCellTracker.hpp  ParticleTracker.hpp
include/Particles/: Particle.hpp  Particles.hpp  ParticlesImpl.hpp
include/Utilities/: CollisionTracker.hpp  CollisionTrackerImpl.hpp  ConcentrationCalculator.hpp  ConfigParser.hpp  Constants.hpp  GSMatrixAssemblier.hpp  MatrixEquationSolver.hpp  ParticleTracker.hpp  Settings.hpp  SolutionVector.hpp  TrilinosPrinter.hpp  TrilinosTypes.hpp  Utilities.hpp
intermediateResults/: CMakeLists.txt  generateConeDistribution.cpp  hard_sphere_model.cpp  monoenergeticMonodirectionJet.cpp  new_gas_expansion.cpp  nonmonoenergeticMonodirectionJet.cpp  particlesExpansion.cpp  particlesSphereLikeExpansion.cpp
intermediateResults/intermediateResults/: monoenergeticMonodirectionJet.cpp  nonmonoenergeticMonodirectionJet.cpp  rotation_implementation.cpp
intermediateResults/rootFiles/: analysis_z_hist.cpp
results/: eMG1-14-G60.stp  settled_particles.msh  sphere.msh
src/: CMakeLists.txt  CollisionTracker.cpp  ConcentrationCalculator.cpp  ConfigParser.cpp  GSMatrixAssemblier.cpp  Grid3D.cpp  HDF5Handler.cpp  MathVector.cpp  MatrixEquationSolver.cpp  Mesh.cpp  Particle.cpp  ParticleInCellTracker.cpp  ParticleTracker.cpp  Ray.cpp  RayTriangleIntersection.cpp  RealNumberGenerator.cpp  Settings.cpp  SolutionVector.cpp  Timer.cpp  TrilinosPrinter.cpp  Utilities.cpp  Visualize.py  VolumeCreator.cpp  VolumetricMeshData.cpp  gen_cone.cc  main.cpp  test.cpp  tracking_particles_in_volume.cpp
src/DataHandling/: CMakeLists.txt  VolumetricMeshData.cpp
src/FiniteElementMethod/: CMakeLists.txt  GSMatrixAssemblier.cpp  MatrixEquationSolver.cpp
src/Generators/: CMakeLists.txt  VolumeCreator.cpp
src/Geometry/: CMakeLists.txt  MathVector.cpp  Mesh.cpp  RayTriangleIntersection.cpp
src/ParticleInCell/: CMakeLists.txt
src/Particles/: CMakeLists.txt  Particle.cpp
src/Utilities/: CMakeLists.txt  CollisionTracker.cpp  Timer.cpp  Utilities.cpp
tests/: CMakeLists.txt  CollisionTrackerTests.cpp  ConfigParserTests.cpp  HDF5HandlerTests.cpp  MathVectorTests.cpp  MeshTests.cpp  ParticleTests.cpp  RayTriangleIntersectionTest.cpp  RayTriangleIntersectionTests.cpp  RealNumberGeneratorTests.cpp  TetrahedronTestMesh.msh.gtest  VolumeCreatorTests.cpp  generateConeDistribution.cpp  main.cpp  particlesExpansion.cpp
tests/configs/: config_invalid_1.json.gtest  config_invalid_10.json.gtest  config_invalid_2.json.gtest  config_invalid_3.json.gtest  config_invalid_4.json.gtest  config_invalid_5.json.gtest  config_invalid_6.json.gtest  config_invalid_7.json.gtest  config_invalid_8.json.gtest  config_invalid_9.json.gtest  config_valid_1.json.gtest  config_valid_10.json.gtest  config_valid_2.json.gtest  config_valid_3.json.gtest  config_valid_4.json.gtest  config_valid_5.json.gtest  config_valid_6.json.gtest  config_valid_7.json.gtest  config_valid_8.json.gtest  config_valid_9.json.gtest
tests/meshes/: BoxMeshTest.msh.gtest  ConeMeshTest.msh.gtest  CylinderMeshTest.msh.gtest  TriangleTestMesh.msh.gtest
ui/: __init__.py  config_tab.py  converter.py  gedit_tab.py  graphical_editor.py  hdf5handler.py  log_console.py  main.py  mesh_dialog.py  mesh_renderer.py  mesh_tab.py  results_tab.py  util.py  window.py
ui/constants/: __init__.py  constants.py  simulation_limitation_constants.py  simulation_parameters_precision.py
ui/data/: __init__.py  hdf5handler.py
ui/dialogs/: __init__.py  angle_dialog.py  axis_selection_dialog.py  expansion_angle_dialog.py  mesh_dialog.py  move_actor_dialog.py  shortcuts_info_dialog.py
ui/dialogs/arrow_dialogs/: __init__.py  arrow_method_selection_dialog.py  arrow_properties_dialog.py  arrow_size_dialog.py
ui/dialogs/boundary_dialog/: __init__.py  boundary_value_input_dialog.py
ui/dialogs/material_dialogs/: __init__.py  add_material_dialog.py  chemical_elements_lsit.py  custom_material_dialog.py  periodic_table_window.py
ui/dialogs/particle_dialogs/: __init__.py  normal_orientation_dialog.py  particle_source_dialog.py  particle_source_type_dialog.py  surface_arrow_manager.py
ui/field_validators/: __init__.py  custom_double_validator.py  custom_int_validator.py  custom_signed_double_validator.py  custom_signed_int_validator.py
ui/graphical_editor/: __init__.py  graphical_editor.py
ui/logger/: __init__.py  cli_history.py  internal_logger.py  log_console.py
ui/styles/: styles.py
ui/tabs/: __init__.py  config_tab.py  gedit_tab.py  graphical_editor.py  results_tab.py
ui/util/: __init__.py  action_history.py  converter.py  graphical_editor.py  inst_deps.py  mesh_dialog.py  mesh_renderer.py  number_checkers.py  path_file_chekers.py  physical_measurement_units_converter.py  project_manager.py  styles.py  util.py  vtk_helpers.py
ui/validators/: __init__.py  custom_double_validator.py
visualization/: create_entities.py  visualize.py
(+37 files in other folders)
